[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b45"
version = "0.1.0"
description = "Reference implementation of the b45 reversible QR Alphanumeric transform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "b45 contributors" },
]

[project.scripts]
b45 = "b45.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
