[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b45"
version = "0.1.0"
description = "Reference implementation of the b45 reversible QR Alphanumeric transform"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["qr", "qrcode", "base45", "alphanumeric", "encoding"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
  { name = "b45 contributors" },
]

[project.urls]
Homepage = "https://github.com/b45/b45"
Repository = "https://github.com/b45/b45"
Issues = "https://github.com/b45/b45/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
]

[project.scripts]
b45 = "b45.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/b45"]
